--- a/FunSeqWinforms/FunSeqWinforms.csproj
+++ b/FunSeqWinforms/FunSeqWinforms.csproj
@@ -71,6 +71,9 @@
     <EmbeddedResource Include="ImageSeriesFilter.resx">
       <DependentUpon>ImageSeriesFilter.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="NewEraPumpControl.resx">
+      <DependentUpon>NewEraPumpControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
